Reader: Fix Follow and Settings button alignment

--- a/client/blocks/reader-site-notification-settings/style.scss
+++ b/client/blocks/reader-site-notification-settings/style.scss
@@ -59,10 +59,6 @@
 	position: relative;
 		left: -4px;
 		top: 4px;
-
-	@include breakpoint( "<480px" ) {
-		left: 0;
-	}
 }
 
 .reader-site-notification-settings__popout-form-toggle {
